# ComputerGraphics

./: .gitignore  README.md
BigHW_vs/: BigHW_vs.sln
BigHW_vs/BigHW_vs/: BigHW_vs.vcxproj  BigHW_vs.vcxproj.filters  main.cpp
BigHW_vs/BigHW_vs/include/: Game.hpp  GraphLine.hpp  Particle.hpp  PhysicalEngine.h  TextRenderer.hpp  camera.h  manResource.hpp  map.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
BigHW_vs/BigHW_vs/src/: PhysicalEngine.cpp  main.cpp
BigHW_vs/BigHW_vs/x64/Debug/: BigHW_vs.exe.recipe  BigHW_vs.ilk  vc143.idb
BigHW_vs/BigHW_vs/x64/Debug/BigHW_vs.tlog/: BigHW_vs.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
BigHW_vs/resources/models/: cube.txt  dino-jump.mtl  dino-lay.mtl  dino.mtl  dino1.mtl  dino2.mtl  dino3.mtl  dragon_cover.txt  dragon_outline.txt  xianren.mtl
BigHW_vs/resources/models/dragon/: dragon.mtl
BigHW_vs/shader/: dragonShader.fs  dragonShader.vs  mapShader.fs  mapShader.vs  particleShader.vs  waterShader.fs  waterShader.vs
bigHW/: CMakeLists.txt  readme.md
bigHW/include/: Game.hpp  GraphLine.hpp  camera.h  manResource.hpp  map.hpp  mesh.hpp  model.hpp  shader.hpp  texture.hpp
bigHW/resources/models/: cube.txt  dino.mtl  dragon_cover.txt  dragon_outline.txt  xianren.mtl
bigHW/shader/: dragonShader.fs  mapShader.fs  mapShader.vs  shader.fs  shader.vs
bigHW/src/: CMakeLists.txt  main.cpp  manResource.cpp  test.cpp  test.txt
include/glad/: glad.h
lib/: glfw3.lib
src/: glad.c
